user signin
 - allows registered user to login
 - return the access token for the created user
