# src/middlewares/validations/userValidation.js
@@ -1,5 +1,5 @@
 import model from "./../../db/models";
-import { signupSchema } from "./schema/user";
+import { signupSchema, signinSchema } from "./schema/user";
 const { User } = model;
 
 /**
@@ -44,6 +44,37 @@ class UserValidation {
         return res.status(409).json({
           error: "username already taken, Please choose another!",
         });
+      next();
+    } catch (error) {
+      return res.status(500).json({ error: "server error" });
+    }
+  }
+
+  /**
+   *
+   * @param {object} req
+   * @param {object} res
+   * @param {object} next
+   */
+
+  static async signinValidator(req, res, next) {
+    try {
+      const credentials = {
+        username: req.body.username.trim(),
+        password: req.body.password,
+      };
+      const checkCredentials = signinSchema.validate(credentials, {
+        abortEarly: false,
+      });
+
+      const errors = [];
+      if (checkCredentials.error) {
+        const { details } = checkCredentials.error;
+        for (let i = 0; i < details.length; i += 1) {
+          errors.push(details[i].message.replace('"', "").replace('"', ""));
+        }
+        return res.status(400).json({ error: errors });
+      }
       next();
     } catch (error) {
       return res.status(500).json({ error: "server error" });
